--- a/src/app/components/bookmarks-list/bookmarks-list.component.html
+++ b/src/app/components/bookmarks-list/bookmarks-list.component.html
@@ -1,23 +1,37 @@
 <div class="bookmarks-container">
-    <h3>Folders</h3>
-    <mat-list>
-        <mat-list-item *ngFor="let folder of folders$ | async">
-            <mat-icon matListItemIcon>folder</mat-icon>
-            <div matListItemTitle>{{ folder.name }}</div>
-            <div matListItemLine>{{ folder.description }}</div>
-        </mat-list-item>
-        <div *ngIf="(folders$ | async)?.length === 0">No folders found.</div>
-    </mat-list>
+    <h3>My Bookmarks</h3>
 
-    <h3>Links</h3>
-    <mat-list>
-        <mat-list-item *ngFor="let bookmark of bookmarks$ | async">
-            <mat-icon matListItemIcon>link</mat-icon>
-            <div matListItemTitle>
-                <a [href]="bookmark.url" target="_blank">{{ bookmark.name }}</a>
+    <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="bookmark-tree">
+        <!-- This is the tree node template for leaf nodes (links) -->
+        <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+            <div class="node-content link-node">
+                <mat-icon class="type-icon">link</mat-icon>
+                <a [href]="node.url" target="_blank" class="node-link">{{ node.title }}</a>
             </div>
-            <div matListItemLine>{{ bookmark.url }}</div>
-        </mat-list-item>
-        <div *ngIf="(bookmarks$ | async)?.length === 0">No links found.</div>
-    </mat-list>
+        </mat-tree-node>
+
+        <!-- This is the tree node template for expandable nodes (folders) -->
+        <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+            <div class="mat-tree-node">
+                <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.title">
+                    <mat-icon class="mat-icon-rtl-mirror">
+                        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                    </mat-icon>
+                </button>
+                <div class="node-content folder-node">
+                    <mat-icon class="type-icon">folder</mat-icon>
+                    <span class="node-title">{{ node.title }}</span>
+                </div>
+            </div>
+            <!-- There is inline padding applied to this div using styles.
+                 This padding value depends on the mat-icon-button width. -->
+            <div [class.example-tree-invisible]="!treeControl.isExpanded(node)" role="group">
+                <ng-container matTreeNodeOutlet></ng-container>
+            </div>
+        </mat-nested-tree-node>
+    </mat-tree>
+
+    <div *ngIf="dataSource.data.length === 0" class="empty-state">
+        <p>No bookmarks found. Sync from the extension to see them here.</p>
+    </div>
 </div>
